--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <meta name="description" content="Soluções especializadas em processos administrativos de CNH: multas, suspensão, cassação e perda de provisória. Regularize sua habilitação com segurança e suporte técnico especializado.">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/style-home.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
+
 </head>
 <body>
     <header>
