--- a/sobre/index.html
+++ b/sobre/index.html
@@ -19,7 +19,9 @@
     <meta name="keywords" content="CNH, suspensão, cassação, multa, provisória, recurso de multa, defesa CNH, trânsito, habilitação">
     <meta name="author" content="CNH em Dia Soluções">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 
 <body>
