--- a/servicos/index.html
+++ b/servicos/index.html
@@ -17,7 +17,9 @@
     <title>Nossos Serviços - CNH em Dia Soluções</title>
     <meta name="description" content="Conheça os serviços da CNH em Dia: assessoria administrativa em multas, suspensão, cassação e perda de CNH provisória.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <header>
