--- a/recusa-ao-bafometro/index.html
+++ b/recusa-ao-bafometro/index.html
@@ -21,7 +21,9 @@
     <link rel="stylesheet" href="/static/style-home.css">
     <!-- Novo CSS para estilização profissional das seções de conteúdo -->
     <link rel="stylesheet" href="/static/style-page-recusa.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <header>
