--- a/recurso-multa-vencida/index.html
+++ b/recurso-multa-vencida/index.html
@@ -17,7 +17,9 @@
     <title>Recurso de Multa Vencido - O que Fazer? | CNH em Dia Soluções</title>
     <meta name="description" content="Perdeu o prazo do recurso de multa? Saiba o que fazer e quais são as opções legais para tentar reverter a penalidade, mesmo após o vencimento do prazo.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 
 <body>
