--- a/provisoria/index.html
+++ b/provisoria/index.html
@@ -17,7 +17,9 @@
     <title>Perda da Provisória - CNH em Dia Soluções</title>
     <meta name="description" content="Orientação especializada para condutores em período probatório. Entenda como evitar a perda da CNH provisória com suporte técnico e administrativo.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <header>
