--- a/pontuacao-cnh/index.html
+++ b/pontuacao-cnh/index.html
@@ -17,7 +17,9 @@
     <title>Pontuação na CNH: Sistema de Pontos Explicado - CNH em Dia Soluções</title>
     <meta name="description" content="Entenda como funciona o sistema de pontuação na CNH, os limites de pontos e como evitar a suspensão por acúmulo.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <!-- Header -->
