--- a/multas/index.html
+++ b/multas/index.html
@@ -17,7 +17,9 @@
     <title>Multas de Trânsito - CNH em Dia Soluções</title>
     <meta name="description" content="Orientação e suporte administrativo para contestação de multas de trânsito. Análise técnica e acompanhamento de processos.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <header>
