--- a/contato/index.html
+++ b/contato/index.html
@@ -17,7 +17,9 @@
     <title>Contato - CNH em Dia Soluções</title>
     <meta name="description" content="Entre em contato com a CNH em Dia Soluções. Atendimento especializado para orientar você na regularização da sua habilitação.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <header>
