--- a/cassacao/index.html
+++ b/cassacao/index.html
@@ -17,7 +17,9 @@
     <title>Cassação da CNH - CNH em Dia Soluções</title>
     <meta name="description" content="Assessoria administrativa e técnica em processos de cassação da CNH. Orientação especializada para ajudar você a regularizar sua habilitação e entender seus direitos.">
     <link rel="stylesheet" href="/static/styles.css">
-    <link rel="icon" type="image/png" href="/static/images/icone.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
 </head>
 <body>
     <header>
