--- a/index.html
+++ b/index.html
@@ -47,15 +47,24 @@
                 <h1>Sua CNH em Dia, Sua Vida em Movimento</h1>
                 <p>Soluções especializadas para resolver questões com lei seca, multas, suspensão, cassação e perda de provisória. Conte com nosso suporte técnico para regularizar sua habilitação com segurança e confiança.</p>
                 <div class="hero-highlight">
-                    <strong>✓ Análise Gratuita</strong> - Avalie seu caso sem compromisso
+                    <strong>✓ Análise Gratuita</strong> - Avalie seu caso agora mesmo!
                 </div>
-                <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." target="_blank" class="cta-button">Fale Conosco Agora</a>
+                <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." 
+   target="_blank" 
+   class="cta-button">
+   Falar Com Especialista 
+   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="WhatsApp" 
+        width="30" 
+        height="30" 
+        style="vertical-align: middle; margin-left: 8px;">
+</a>
             </div>
             <div class="hero-image">
                 <div class="hero-image-wrapper">
                     <img src="/static/images/imagem-pagina-inicial.png" alt="Sua CNH em Dia, Sua Vida em Movimento" loading="lazy">
                 </div>
-                <div class="hero-badge">Equipe dedicada e experiente</div>
+                <div class="hero-badge">100% de Satisfação</div>
             </div>
         </div>
     </section>
