--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CNH em Dia Soluções - Sua CNH em Dia, Sua Vida Em Movimento.</title>
-    <meta name="description" content="Soluções especializadas em processos administrativos de CNH: multas, suspensão, cassação e perda de provisória. Regularize sua habilitação com segurança e suporte técnico especializado.">
+    <meta name="description" content="Estamos focados em resolver o seu problema. Seja ele: Lei seca, Recusa ao bafômetro, suspensão, cassação, multas, perda da provisoria, documentação do veiculo, entre outras.">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="/static/style-home.css">
     <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
@@ -45,14 +45,14 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Sua CNH em Dia, Sua Vida em Movimento</h1>
-                <p>Soluções especializadas para resolver questões com lei seca, multas, suspensão, cassação e perda de provisória. Conte com nosso suporte técnico para regularizar sua habilitação com segurança e confiança.</p>
+                <p>Não deixe que os problemas com <strong>multa de bafômetro, ultrapassagem, manobra perigosa, suspensão ou cassação da CNH</strong> te paralisem. Somos a consultoria especializada em reverter penalidades, com expertise, agilidade e segurança.</p>
                 <div class="hero-highlight">
                     <strong>✓ Análise Gratuita</strong> - Avalie seu caso agora mesmo!
                 </div>
                 <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." 
    target="_blank" 
    class="cta-button">
-   Falar Com Especialista 
+   Falar Com Especialista
    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="WhatsApp" 
         width="30" 
@@ -60,59 +60,30 @@
         style="vertical-align: middle; margin-left: 8px;">
 </a>
             </div>
-            <div class="hero-image">
                 <div class="hero-image-wrapper">
-                    <img src="/static/images/imagem-pagina-inicial.png" alt="Sua CNH em Dia, Sua Vida em Movimento" loading="lazy">
+                    <img src="/static/images/fotopessoal.jpg" alt="Sua CNH em Dia, Sua Vida em Movimento" loading="lazy">
                 </div>
-                <div class="hero-badge">100% de Satisfação</div>
-            </div>
-        </div>
-    </section>
-
-    <!-- SEÇÃO DE ESTATÍSTICAS -->
-    <section class="stats-section">
-        <div class="stats-container">
-            <div class="stat-card">
-                <div class="stat-number" data-target="2000">+ 2.000</div>
-                <div class="stat-label">Consultas Realizadas</div>
-                <p class="stat-description">Confiança construída com atendimento real</p>
-            </div>
-            <div class="stat-card">
-                <div class="stat-number" data-target="92">92%</div>
-                <div class="stat-label">Resolução em Casos Elegíveis</div>
-                <p class="stat-description">Quando o caso tem solução, nós vamos até o fim</p>
-            </div>
-            <div class="stat-card">
-                <div class="stat-number" data-target="100">100%</div>
-                <div class="stat-label">Suporte Humanizado</div>
-                <p class="stat-description">Acompanhamento em cada etapa</p>
-            </div>
-            <div class="stat-card">
-                <div class="stat-number" data-target="0">0</div>
-                <div class="stat-label">Problemas com Sigilo de Dados</div>
-                <p class="stat-description">Seu caso é tratado com a máxima confidencialidade</p>
-            </div>
-        </div>
     </section>
 
     <!-- SEÇÃO DE SERVIÇOS -->
     <section>
         <h2>Nossos Serviços</h2>
         <p class="section-subtitle">Soluções completas e personalizadas para resolução do seu problema.</p>
-        
+
         <div class="cards-container">
+
+            <div class="card">
+                <div class="card-icon">🚗</div>
+                <h3>Multas de Trânsito em Geral</h3>
+                <p>Elaboração de recursos administrativos, recurso técnico e orientação especializada para contestar autuações indevidas ou injustas.</p>
+                <a href="/multas/" class="card-link">Saiba mais</a>
+            </div>
+
             <div class="card">
                 <div class="card-icon">🍺</div>
                 <h3>Lei Seca (Embriaguez)</h3>
                 <p>Estratégias administrativas especializadas em infrações de alcoolemia, com análise técnica do auto de infração e explicação detalhada.</p>
                 <a href="/lei-seca/" class="card-link">Saiba mais</a>
-            </div>
-
-            <div class="card">
-                <div class="card-icon">🚗</div>
-                <h3>Multas de Trânsito</h3>
-                <p>Elaboração de recursos administrativos, recurso técnico e orientação especializada para contestar autuações indevidas ou injustas.</p>
-                <a href="/multas/" class="card-link">Saiba mais</a>
             </div>
 
             <div class="card">
@@ -135,8 +106,48 @@
                 <p>Orientação técnica para condutores que perderam a permissão durante o período probatório e desejam regularizar sua situação.</p>
                 <a href="/provisoria/" class="card-link">Saiba mais</a>
             </div>
+        </div>
+     </section>
 
-            
+     <section style="background: rgba(0, 0, 0, 0.822);" class="cta-final-section">
+        <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." 
+   target="_blank" 
+   class="cta-button">
+   Falar Com Especialista
+   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="WhatsApp" 
+        width="30" 
+        height="30" 
+        style="vertical-align: middle; margin-left: 8px;">
+</a>
+</section>
+
+    <!-- SEÇÃO DE ESTATÍSTICAS -->
+    <section class="stats-section">
+        <h2>Nossos Números</h2>
+        <p class="section-subtitle">Sempre melhorando a cada passo.</p>
+
+        <div class="stats-container">
+            <div class="stat-card">
+                <div class="stat-number" data-target="2000">+ 2.000</div>
+                <div class="stat-label">Consultas Realizadas</div>
+                <p class="stat-description">Confiança construída com atendimento real</p>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" data-target="92">92%</div>
+                <div class="stat-label">Resolução em Casos Elegíveis</div>
+                <p class="stat-description">Quando o caso tem solução, nós vamos até o fim</p>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" data-target="100">100%</div>
+                <div class="stat-label">Suporte Humanizado</div>
+                <p class="stat-description">Acompanhamento em cada etapa</p>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" data-target="0">0</div>
+                <div class="stat-label">Problemas com Sigilo de Dados</div>
+                <p class="stat-description">Seu caso é tratado com a máxima confidencialidade</p>
+            </div>
         </div>
     </section>
 
@@ -171,6 +182,19 @@
             </div>
         </div>
     </section>
+
+    <section style="background: rgba(0, 0, 0, 0.822);" class="cta-final-section">
+        <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." 
+   target="_blank" 
+   class="cta-button">
+   Falar Com Especialista
+   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="WhatsApp" 
+        width="30" 
+        height="30" 
+        style="vertical-align: middle; margin-left: 8px;">
+</a>
+</section>
 
     <!-- SEÇÃO DE PROCESSO -->
     <section>
@@ -208,8 +232,17 @@
     <section class="cta-final-section">
         <h2>Precisa de Ajuda com sua CNH?</h2>
         <p class="section-subtitle">Entre em contato agora e receba uma análise gratuita da sua situação administrativa</p>
-        <a href="/contato/" class="cta-button">Solicitar Atendimento</a>
-    </section>
+        <a href="https://wa.me/5511994187695?text=Ol%C3%A1%2C%20estava%20no%20site%20da%20CNH%20em%20Dia%20Solu%C3%A7%C3%B5es%20e%20gostaria%20de%20uma%20consultoria%20sobre%20o%20meu%20problema." 
+   target="_blank" 
+   class="cta-button">
+   Falar Com Especialista
+   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="WhatsApp" 
+        width="30" 
+        height="30" 
+        style="vertical-align: middle; margin-left: 8px;">
+</a>
+</section>
 
     <!-- AVISO LEGAL -->
     <main style="padding: 20px;" class="content-page">
