--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
         height="30" 
         style="vertical-align: middle; margin-left: 8px;">
 </a>
-            </div>
+            <div class="hero-image">
                 <div class="hero-image-wrapper">
                     <img src="/static/images/fotopessoal.jpg" alt="Sua CNH em Dia, Sua Vida em Movimento" loading="lazy">
                 </div>
+            <div class="hero-badge">Especialista Igor Novais</div>
+            </div>
+            </div>
     </section>
 
     <!-- SEÇÃO DE SERVIÇOS -->
