Fix indentation in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         height="30" 
         style="vertical-align: middle; margin-left: 8px;">
 </a>
-            
+            <div>
                 <div class="hero-image-wrapper">
                     <img src="/static/images/fotopessoal.jpg" alt="Sua CNH em Dia, Sua Vida em Movimento" loading="lazy">
                 </div>
