Add CNPJ information to footer section

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -145,6 +145,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
+                <p>CPNJ: 63.687.598/0001-59</p>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
