--- a/provisoria/index.html
+++ b/provisoria/index.html
@@ -151,6 +151,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
+                <p>CPNJ: 63.687.598/0001-59</p>
                 <p>Soluções especializadas para resolver questões com lei seca, multas, suspensão, cassação e perda de provisória. Conte com nosso suporte técnico para regularizar sua habilitação com segurança e confiança.</p>
             </div>
 
