Add CNPJ information to footer section

--- a/cassacao/index.html
+++ b/cassacao/index.html
@@ -184,6 +184,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
+                <p>CPNJ: 63.687.598/0001-59</p>
                 <p>Soluções administrativas e técnicas para manter sua habilitação regularizada.</p>
             </div>
 
