Update CSS stylesheet link in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Estamos focados em resolver o seu problema. Seja ele: Lei seca, Recusa ao bafômetro, suspensão, cassação, multas, perda da provisoria, documentação do veiculo, entre outras.">
     
     <!-- CSS Unificado -->
-    <link rel="stylesheet" href="/static/style-teste.css">
+    <link rel="stylesheet" href="/static/styles.css">
     
     <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
     <link rel="shortcut icon" href="/favicon.png">
