Change image format from JPG to JPEG

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="imagempessoal"> 
-                <img src="/static/images/fotopessoal.jpg" alt="Especialista Igor Novais" loading="lazy"> 
+                <img src="/static/images/fotopessoal.jpeg" alt="Especialista Igor Novais" loading="lazy"> 
                 <div class="hero-badge">Especialista Igor Novais</div> 
             </div> 
         </div>
