--- a/suspensao/index.html
+++ b/suspensao/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suspensão da CNH - CNH em Dia Soluções</title>
     <meta name="description" content="Assessoria especializada em processos de suspensão da CNH. Suporte administrativo e estratégias técnicas para regularizar sua habilitação.">
-    <link rel="stylesheet" href=/static/styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
     <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
     <link rel="shortcut icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/favicon.png">
@@ -128,7 +128,7 @@
 
     <main style="padding: 20px;" class="content-page">
         <div class="legal-note">
-                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.            </div>
+                <p style="text-align: center;"><strong>⚠️ Aviso Legal:</strong> A CNH em Dia Soluções atua como consultoria administrativa e suporte jurídico em parceria com advogados regularmente inscritos na OAB, responsáveis pela condução e representação judicial dos clientes.
         </div>
     </main>
 
