--- a/contato/index.html
+++ b/contato/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <section style="background: var(--light-gray);">
-        <h2 class="titulo-1">Entre em Contato</h2>
+        <h2 class="titulo-1" style="margin-top: 100px;">Entre em Contato</h2>
         <p class="section-subtitle">Preencha o formulário abaixo.</p>
         
         <form action="https://formsubmit.co/cnhemdiasolucoes@gmail.com" method="POST" class="contact-form" id="contactForm" autocomplete="off" spellcheck="false">
