--- a/contato/index.html
+++ b/contato/index.html
@@ -41,7 +41,7 @@
         <h2 class="titulo-1" style="margin-top: 100px;">Entre em Contato</h2>
         <p class="section-subtitle">Preencha o formulário abaixo.</p>
         
-        <form action="https://formsubmit.co/cnhemdiasolucoes@gmail.com" method="POST" class="contact-form" id="contactForm" autocomplete="off" spellcheck="false">
+        <form id="contactForm" method="POST" class="contact-form" autocomplete="off" spellcheck="false">
             <div class="form-group">
                 <label for="nome">Nome Completo *</label>
                 <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo">
@@ -253,10 +253,10 @@
 
         try {
             // Envia os dados para o FormSubmit
-            const response = await fetch("https://formsubmit.co/igornovais.sft@gmail.com", {
-                method: "POST",
-                body: formData
-            });
+                const response = await fetch("https://formsubmit.co/cnhemdiasolucoes@gmail.com", {
+        method: "POST",
+        body: formData
+    });
 
             if (response.ok) {
                 alert('✅ Mensagem enviada com sucesso! Entraremos em contato em breve.');
