--- a/contato/index.html
+++ b/contato/index.html
@@ -80,7 +80,7 @@
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Nova solicitação - CNH em Dia Soluções">
 
-            <button type="submit" class="submit-button">Enviar<button>
+            <button type="submit" class="submit-button">Enviar</button>
         </form>
     </section>
     <section>
