--- a/contato/index.html
+++ b/contato/index.html
@@ -247,28 +247,32 @@
     const contactForm = document.getElementById('contactForm');
 
     contactForm.addEventListener('submit', async (e) => {
-        e.preventDefault(); // Impede o reload da página
+    e.preventDefault(); // impede recarregar a página antes de enviar
 
-        const formData = new FormData(contactForm);
+    const formData = new FormData(contactForm);
 
-        try {
-            // Envia os dados para o FormSubmit
-                const response = await fetch("https://formsubmit.co/cnhemdiasolucoes@gmail.com", {
-        method: "POST",
-        body: formData
-    });
+    try {
+        const response = await fetch("https://formsubmit.co/cnhemdiasolucoes@gmail.com", {
+            method: "POST",
+            body: formData
+        });
 
-            if (response.ok) {
-                alert('✅ Mensagem enviada com sucesso! Entraremos em contato em breve.');
-                contactForm.reset();
-            } else {
-                alert('❌ Erro ao enviar o formulário. Tente novamente mais tarde.');
-            }
-        } catch (error) {
-            alert('❌ Ocorreu um erro inesperado. Verifique sua conexão e tente novamente.');
-            console.error(error);
+        if (response.ok) {
+
+            // Redireciona para o WhatsApp
+            window.location.href = "https://wa.me/5511994187695?text=Olá, preenchi o formulário e gostaria de atendimento.";
+
+            // Limpa o formulário (opcional)
+            contactForm.reset();
+
+        } else {
+            alert('❌ Erro ao enviar o formulário. Tente novamente mais tarde.');
         }
-    });
+    } catch (error) {
+        alert('❌ Ocorreu um erro inesperado. Verifique sua conexão e tente novamente.');
+        console.error(error);
+    }
+});
 
     // === MÁSCARA DE TELEFONE ===
     const telefoneInput = document.getElementById('telefone');
