--- a/contato/index.html
+++ b/contato/index.html
@@ -60,13 +60,12 @@
             <div class="form-group">
                 <label for="assunto">Assunto *</label>
                 <select id="assunto" name="assunto" required>
-                    <option value="">Selecione o assunto</option>
-                    <option value="bafometro">Lei Seca/Recusa ao Bafômetro</option>
-                    <option value="multas">Multas de Trânsito</option>
-                    <option value="suspensao">Suspensão da CNH</option>
-                    <option value="cassacao">Cassação da CNH</option>
-                    <option value="provisoria">Perda da Provisória</option>
-                    <option value="outro">Outro Assunto</option>
+                    <option value="Lei Seca">Lei Seca/Recusa ao Bafômetro</option>
+                    <option value="Multas">Multas de Trânsito</option>
+                    <option value="Suspensão">Suspensão da CNH</option>
+                    <option value="Cassação">Cassação da CNH</option>
+                    <option value="Perda da Provisória">Perda da Provisória</option>
+                    <option value="Outro">Outro Assunto</option>
                 </select>
             </div>
 
