Update WhatsApp redirect message in index.html

--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -12,11 +12,12 @@
 </script>
 
     
-  <meta http-equiv="refresh" content="0; url=https://wa.me/5511994187695?text=Olá%20👋%20vi%20seu%20contato%20da%20CNH%20em%20Dia%20Soluções%20e%20gostaria%20de%20saber%20mais%20sobre%20a%20regularização%20da%20minha%20CNH.">
+  <meta http-equiv="refresh" content="0; url=https://wa.me/5511994187695?text=Ol%C3%A1%2C%20encontrei%20voc%C3%AAs%20no%20google%20e%20quero%20resolver%20a%20minha%20*multa%20de%20baf%C3%B4metro*.">
   <title>Redirecionando para o WhatsApp...</title>
 </head>
 <body>
   <p>Redirecionando para o WhatsApp...</p>
 </body>
 </html>
+
 
