Modify WhatsApp redirect message in index.html
Updated the meta refresh URL text for clarity.

--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -12,12 +12,13 @@
 </script>
 
     
-  <meta http-equiv="refresh" content="0; url=https://wa.me/5511994187695?text=Ol%C3%A1%2C%20encontrei%20voc%C3%AAs%20no%20google%20e%20quero%20resolver%20a%20minha%20*multa%20de%20baf%C3%B4metro*.">
+  <meta http-equiv="refresh" content="0; url=https://wa.me/5511994187695?text=Ol%C3%A1%2C%20Encontrei%20Voc%C3%AAs%20No%20Google%20E%20Quero%20Resolver%20Minha%20*Multa%20De%20Baf%C3%B4metro*%20O%20Quanto%20Antes.">
   <title>Redirecionando para o WhatsApp...</title>
 </head>
 <body>
   <p>Redirecionando para o WhatsApp...</p>
 </body>
 </html>
+
 
 
