--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
       gtag('config', 'AW-17709604708');
     </script>
 
+    <!-- Event snippet for WhatsApp - Clique (Página) conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17709604708/3A1hCK-KneYbEOS-zPxB',
+      'event_callback': callback
+  });
+  return false;
+}
+</script>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CNH em Dia Soluções - Sua CNH em Dia, Sua Vida Em Movimento.</title>
