--- a/cnh-suspensa/index.html
+++ b/cnh-suspensa/index.html
@@ -10,6 +10,23 @@
     gtag('config', 'AW-17709604708');
   </script>
 
+  <!-- Event snippet for WhatsApp - Clique (Página) conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17709604708/3A1hCK-KneYbEOS-zPxB',
+      'event_callback': callback
+  });
+  return false;
+}
+</script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -1049,3 +1066,4 @@
   </script>
 </body>
 </html>
+
