--- a/cnh-suspensa/index.html
+++ b/cnh-suspensa/index.html
@@ -13,16 +13,26 @@
   <!-- Event snippet for WhatsApp - Clique (Página) conversion page
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
 <script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
+function gtag_report_conversion(url, target) {
+  var go = function () {
+    if (typeof url !== 'undefined') {
+      if (target === '_blank') window.open(url, '_blank');
+      else window.location = url;
     }
   };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-17709604708/3A1hCK-KneYbEOS-zPxB',
-      'event_callback': callback
-  });
+
+  try {
+    if (typeof gtag === 'function') {
+      gtag('event', 'conversion', {
+        'send_to': 'AW-17709604708/3A1hCK-KneYbEOS-zPxB',
+        'event_callback': go
+      });
+      return false;
+    }
+  } catch (e) {}
+
+  // Se o gtag não existir, não bloqueia o usuário
+  go();
   return false;
 }
 </script>
@@ -606,7 +616,7 @@ function gtag_report_conversion(url) {
           <li><a href="/sobre/">Sobre</a></li>
           <li><a href="#contato">Contato</a></li>
           <li>
-            <a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+an%C3%A1lise+do+meu+caso+%28Suspens%C3%A3o+da+CNH%29.&type=phone_number&app_absent=0" target="_blank">
+            <a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+an%C3%A1lise+do+meu+caso+%28Suspens%C3%A3o+da+CNH%29.&type=phone_number&app_absent=0" target="_blank" onclick="return gtag_report_conversion(this.href, this.target);">
               <span style="color:white">Falar no WhatsApp</span>
               <span class="wa-dot" aria-hidden="true">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="30" height="30">
@@ -644,7 +654,7 @@ function gtag_report_conversion(url) {
                   </p>
 
                   <div class="hero-actions">
-                    <a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+an%C3%A1lise+do+meu+caso+%28Suspens%C3%A3o+da+CNH%29.&type=phone_number&app_absent=0" id="ctaHero" target="_blank">
+                    <a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+an%C3%A1lise+do+meu+caso+%28Suspens%C3%A3o+da+CNH%29.&type=phone_number&app_absent=0" id="ctaHero" target="_blank" onclick="return gtag_report_conversion(this.href, this.target);">
                       <span style="text-align:center;">Quero minha análise agora</span>
                       <span class="wa-dot" aria-hidden="true">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="20" height="20">
@@ -920,7 +930,7 @@ function gtag_report_conversion(url) {
   </main>
 
   <!-- WhatsApp Float -->
-  <a class="whatsapp-float" id="waFloat" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+an%C3%A1lise+do+meu+caso+%28Suspens%C3%A3o+da+CNH%29.&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" aria-label="Falar no WhatsApp">
+  <a class="whatsapp-float" id="waFloat" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+an%C3%A1lise+do+meu+caso+%28Suspens%C3%A3o+da+CNH%29.&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" aria-label="Falar no WhatsApp" onclick="return gtag_report_conversion(this.href, this.target);">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="50" height="50">
   </a>
 
@@ -1066,4 +1076,5 @@ function gtag_report_conversion(url) {
   </script>
 </body>
 </html>
+
 
